Bug 126584 - Paragraph Styles dialog next style edit style button should be disabled for new style
Summary: Paragraph Styles dialog next style edit style button should be disabled for n...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: Writer-Styles-Paragraph
  Show dependency treegraph
 
Reported: 2019-07-29 02:17 UTC by Jim Raykowski
Modified: 2019-08-26 08:17 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2019-07-29 02:17:50 UTC
Steps to repro:

1) Menu > View > Styles or F11
2) Right click on any Paragraph style and select New..

Results: Next style Edit Style button is enabled.

Expected results: Next style Edit Style button is disabled when Next style name is the same as Style name
Comment 1 Dieter 2019-07-29 07:27:17 UTC
I agree. We should also change this in page style dialog.

cc: Design Team
Comment 2 Heiko Tietze 2019-07-30 11:51:06 UTC
Isn't Next style for the following paragraph that comes after you press enter? And if so why should that be disabled?
Comment 3 Dieter 2019-07-30 12:11:03 UTC
(In reply to Heiko Tietze from comment #2)
> Isn't Next style for the following paragraph that comes after you press
> enter? And if so why should that be disabled?

I understand Jim as follows:
If you create a new style (by default "untitled" the next style is by default the same style "untitled". So it makes no sense to edit this next style, because it's the same style you actual edit.

So I agree with Jims' proposal: "Edit Style" button for next style should be disabled when next style is the same as the style you actual edit.
Comment 4 Heiko Tietze 2019-07-30 12:45:09 UTC
If you disable this option you cannot change it and Untitled will always be followed by Untitled even when you rename it to My_Heading (where usually comes Default Style after). What we could do is to change Untitled to Default but not disable.
Comment 5 Heiko Tietze 2019-07-30 12:46:22 UTC
And Untitled is changed into what you enter under Name, which makes it more clear IMHO.
Comment 6 Jim Raykowski 2019-07-30 14:36:06 UTC
This bug is about the Edit Style button to the right of the Next Style drop down list box. If Next Style is changed and then change back to the style currently being edited, Untitled# when new, the Edit Style button becomes disabled. When the style dialog is opened by Modify... in the sidebar or Menu > Styles > Edit Styles the Next Style Edit Style button is disabled. For these reasons I believe this is bug when the style dialog is opened for new style.
Comment 7 Heiko Tietze 2019-07-30 14:48:57 UTC
(In reply to Jim Raykowski from comment #6)
> This bug is about the Edit Style button to the right...

Oh yes. This edit button is pointless, and the dropdown remains enabled. However it would have to be available when you switch to another style and disabled when going back. Not sure that a simple name=name is sufficient.

Sorry for the confusion.
Comment 8 Commit Notification 2019-08-01 05:38:59 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/0cc2ec0f0f2380d2c5456a5b8c9bb1789e832cde%5E%21

tdf#126584 Disable styles next style edit style button

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Dieter 2019-08-26 08:17:41 UTC
Verified with

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 3e64065612acec2eb29aa21e2b515953422256d7
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2019-08-15_22:57:26
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded

Jim, thanks for fixing it.