tdf#126584 Disable styles next style edit style button

...on dialog opening for paragraph and page new style creation.

Change-Id: I64dd51947261249293581c73bd1c410f3b54a592